@@ -48,7 +48,49 @@ name|lucene
 operator|.
 name|store
 operator|.
+name|Directory
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|store
+operator|.
 name|MockDirectoryWrapper
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|store
+operator|.
+name|RAMDirectory
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|index
+operator|.
+name|CorruptIndexException
 import|;
 end_import
 
@@ -119,6 +161,36 @@ operator|.
 name|index
 operator|.
 name|ConcurrentMergeScheduler
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|index
+operator|.
+name|MergeScheduler
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|index
+operator|.
+name|MergePolicy
+operator|.
+name|OneMerge
 import|;
 end_import
 
@@ -591,6 +663,190 @@ name|assertTrue
 argument_list|(
 name|excCalled
 argument_list|)
+expr_stmt|;
+name|dir
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+block|}
+DECL|class|ReportingMergeScheduler
+specifier|private
+specifier|static
+class|class
+name|ReportingMergeScheduler
+extends|extends
+name|MergeScheduler
+block|{
+annotation|@
+name|Override
+DECL|method|merge
+specifier|public
+name|void
+name|merge
+parameter_list|(
+name|IndexWriter
+name|writer
+parameter_list|)
+throws|throws
+name|CorruptIndexException
+throws|,
+name|IOException
+block|{
+name|OneMerge
+name|merge
+init|=
+literal|null
+decl_stmt|;
+while|while
+condition|(
+operator|(
+name|merge
+operator|=
+name|writer
+operator|.
+name|getNextMerge
+argument_list|()
+operator|)
+operator|!=
+literal|null
+condition|)
+block|{
+if|if
+condition|(
+name|VERBOSE
+condition|)
+block|{
+name|System
+operator|.
+name|out
+operator|.
+name|println
+argument_list|(
+literal|"executing merge "
+operator|+
+name|merge
+operator|.
+name|segString
+argument_list|(
+name|writer
+operator|.
+name|getDirectory
+argument_list|()
+argument_list|)
+argument_list|)
+expr_stmt|;
+block|}
+name|writer
+operator|.
+name|merge
+argument_list|(
+name|merge
+argument_list|)
+expr_stmt|;
+block|}
+block|}
+annotation|@
+name|Override
+DECL|method|close
+specifier|public
+name|void
+name|close
+parameter_list|()
+throws|throws
+name|CorruptIndexException
+throws|,
+name|IOException
+block|{}
+block|}
+DECL|method|testCustomMergeScheduler
+specifier|public
+name|void
+name|testCustomMergeScheduler
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+comment|// we don't really need to execute anything, just to make sure the custom MS
+comment|// compiles. But ensure that it can be used as well, e.g., no other hidden
+comment|// dependencies or something. Therefore, don't use any random API !
+name|Directory
+name|dir
+init|=
+operator|new
+name|RAMDirectory
+argument_list|()
+decl_stmt|;
+name|IndexWriterConfig
+name|conf
+init|=
+operator|new
+name|IndexWriterConfig
+argument_list|(
+name|TEST_VERSION_CURRENT
+argument_list|,
+literal|null
+argument_list|)
+decl_stmt|;
+name|conf
+operator|.
+name|setMergeScheduler
+argument_list|(
+operator|new
+name|ReportingMergeScheduler
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|IndexWriter
+name|writer
+init|=
+operator|new
+name|IndexWriter
+argument_list|(
+name|dir
+argument_list|,
+name|conf
+argument_list|)
+decl_stmt|;
+name|writer
+operator|.
+name|addDocument
+argument_list|(
+operator|new
+name|Document
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|writer
+operator|.
+name|commit
+argument_list|()
+expr_stmt|;
+comment|// trigger flush
+name|writer
+operator|.
+name|addDocument
+argument_list|(
+operator|new
+name|Document
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|writer
+operator|.
+name|commit
+argument_list|()
+expr_stmt|;
+comment|// trigger flush
+name|writer
+operator|.
+name|optimize
+argument_list|()
+expr_stmt|;
+name|writer
+operator|.
+name|close
+argument_list|()
 expr_stmt|;
 name|dir
 operator|.
